ticker flip aninmation IE10+ fix

--- a/src/scripts/directives/news-ticker/_news-ticker.scss
+++ b/src/scripts/directives/news-ticker/_news-ticker.scss
@@ -41,13 +41,19 @@
 }
 /* flip the pane when hovered */
 .flipper.flip {
-  transform: rotateX(180deg);
-
+  .back {
+    transform: rotateX(0deg);
+  }
+  .front{
+    transform: rotateX(180deg);
+  }
 }
 
 .flip-container, .flipper, .front, .back {
   width: 100%;
   height: 100%;
+  transform-style: preserve-3d;
+
 }
 
 /* flip speed goes here */
@@ -55,14 +61,13 @@
   transition: 0.6s;
   transform-style: preserve-3d;
   transform-origin: 100% 50%; /* half of height */
-
   position: relative;
 }
 
 /* hide back of pane during swap */
 .front, .back {
   backface-visibility: hidden;
-
+  transition: 0.6s;
   position: absolute;
   top: 0;
   left: 0;
@@ -77,5 +82,5 @@
 
 /* back, initially hidden pane */
 .back {
-  transform: rotateX(180deg);
+  transform: rotateX(-180deg);
 }
